--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://mentalflow.pages.dev'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'mentalflow'
 theme = 'paperMod'
