--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,4 @@ baseURL = 'https://mentalflow.pages.dev'
 languageCode = 'en-us'
 title = 'mentalflow'
 theme = 'paperMod'
+googleAnalytics = 'G-NCDHNEYW02'
