--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/paperMod"]
 	path = themes/paperMod
 	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "themes/FixIt"]
+	path = themes/FixIt
+	url = https://github.com/hugo-fixit/FixIt.git
