--- a/hugo.toml
+++ b/hugo.toml
@@ -789,7 +789,7 @@ enableEmoji = true
       Mix = false
     # FixIt 0.2.15 | CHANGED Comment config
     [params.page.comment]
-      enable = false
+      enable = true
       # FixIt 0.2.13 | NEW Artalk comment config (https://artalk.js.org/)
       [params.page.comment.artalk]
         enable = false
@@ -889,9 +889,9 @@ enableEmoji = true
         enable = false
       # Utterances comment config (https://utteranc.es)
       [params.page.comment.utterances]
-        enable = false
+        enable = true
         # owner/repo
-        repo = ""
+        repo = "liuzehao/mentalflowtalk"
         issueTerm = "pathname"
         label = ""
         lightTheme = "github-light"
@@ -1017,10 +1017,10 @@ enableEmoji = true
 
   # Analytics config
   [params.analytics]
-    enable = false
+    enable = true
     # Google Analytics
     [params.analytics.google]
-      id = ""
+      id = "G-NCDHNEYW02"
       # whether to anonymize IP
       anonymizeIP = true
     # Fathom Analytics
