--- a/config.old.toml
+++ b/config.old.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://mentalflow.pages.dev'
+baseURL = 'https://mentalflowing.com'
 languageCode = 'en-us'
 title = 'mentalflow'
 theme = 'FixIt'
