--- a/hugo.toml
+++ b/hugo.toml
@@ -557,7 +557,7 @@ enableEmoji = true
     Odnoklassniki = ""
     VK = ""
     Flickr = ""
-    Xing = ""
+    Xing = "Liu18969285750"
     Snapchat = ""
     Soundcloud = ""
     Spotify = ""
@@ -617,7 +617,6 @@ enableEmoji = true
     TryHackMe = ""
     Douyin = ""
     TikTok = ""
-    Wechat = "Liu18969285750"
     Phone = ""
     Email = "hao849272928@gmail.com"
     RSS = true
