--- a/hugo.toml
+++ b/hugo.toml
@@ -803,7 +803,7 @@ enableEmoji = true
       # FixIt 0.2.13 | NEW Artalk comment config (https://artalk.js.org/)
       [params.page.comment.artalk]
         enable = false
-        server = "https://yourdomain"
+        server = "https://mentalflowing.com"
         site = "默认站点"
         placeholder = ""
         noComment = ""
