--- a/hugo.toml
+++ b/hugo.toml
@@ -518,7 +518,7 @@ enableEmoji = true
       # title shown in home page (HTML format is supported)
       title = ""
       # subtitle shown in home page
-      subtitle = "一个尚未脱离低级趣味的人"
+      subtitle = "一个普通人类，自由的呼吸者"
       # whether to use typeit animation for subtitle
       typeit = true
       # whether to show social links
